[package]
name = "bucket"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
boxcar = "0.2.14"
chrono = "0.4.41"
clap = { version = "4.5.47", features = ["derive"] }
droplet-rs = "0.7.3"
hex = "0.4.3"
md5 = "0.8.0"
rayon = "1.11.0"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
